--- a/src/components/commons/PdfReader/Viewer.less
+++ b/src/components/commons/PdfReader/Viewer.less
@@ -241,14 +241,16 @@
     transform: translateY(-50%);
   }
 }
-.pdf-sidebar {
-  position: fixed;
-  top: 64px;
-  right: 0;
-  bottom: 0;
-  z-index: 1028;
-  background: #ffffff;
-  width: inherit;
-  overflow: auto;
+.pdf-wrapper {
+  position: relative;
+  width: 100%;
 }
-
+//.pdf-sidebar {
+//  position: relative;
+//  bottom: 0;
+//  z-index: 1028;
+//  background: #ffffff;
+//  width: 100%;
+//  height: 100%;
+//  overflow: auto;
+//}
